# stardust

./: .gitmodules  CMakeLists.txt  README.md
CMake/: FindFreeImage.cmake  FindGTK3.cmake  FindSndfile.cmake  StardustConfig.buildtree.cmake.in  StardustConfig.cmake.in  StardustFindEQ.cmake  StardustFindOF.cmake
examples/eq_configs/: 6-window.eqc
examples/simple2D/: CMakeLists.txt
examples/simple2D/src/: CMakeLists.txt  application.cpp  application.h  frameData.cpp  frameData.h  main.cpp  renderer.cpp  renderer.h
examples/simple3D/: CMakeLists.txt  Makefile
examples/simple3D/CMake/: FindStardust.cmake
examples/simple3D/src/: CMakeLists.txt  application.cpp  application.h  frameData.cpp  frameData.h  main.cpp  renderer.cpp  renderer.h
include/stardust/: application.h  renderer.h  viewData.h
include/stardust/internal/: renderer.h  window.h
src/: CMakeLists.txt
src/stardust/: application.cpp  renderer.cpp  viewData.cpp
src/stardust/internal/: renderer.cpp  window.cpp
utils/linux/: build_EQ.sh  install_EQ_dependencies.sh
utils/osx/: build_EQ.sh  install_EQ_dependencies.sh
