### ===============================================================================================================
### Author: Petros Kataras <petroskataras@gmail.com>
### ===============================================================================================================

### ===============================================================================================================
### Minimum required.
### ===============================================================================================================
cmake_minimum_required( VERSION 2.8 FATAL_ERROR )

project(Simple3DApp)

### ===============================================================================================================
### Quiet.
### ===============================================================================================================
option(CMAKE_VERBOSE_MAKEFILE "Toggle verbose makefile" OFF)

### ===============================================================================================================
### .cmake files directory for finding various dependencies.
### ===============================================================================================================
set( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/CMake" )

include(FindStardust)
#include(OF_Addons)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
add_subdirectory(src)
