### =============================================================================================================== 
### Include dirs.
### =============================================================================================================== 
include_directories(
                ${PROJECT_SOURCE_DIR}/src
                ${STARDUST_INCLUDE_DIRS}   
)

### =============================================================================================================== 
### Source files.
### =============================================================================================================== 
set( src_files application.cpp 
               renderer.cpp 
               frameData.cpp        
               main.cpp 
)

### =============================================================================================================== 
### Compile the executable.
### =============================================================================================================== 
add_executable( simple3DApp ${src_files})

### =============================================================================================================== 
### Target properties.
### =============================================================================================================== 
set_target_properties( simple3DApp PROPERTIES DEBUG_POSTFIX "_D" )

### =============================================================================================================== 
### Finally link with stardust.
### =============================================================================================================== 
target_link_libraries( simple3DApp stardust )


